Update RESTful API with Prisma
